@@ -110,6 +110,14 @@ UPDATE `gameobject` SET `spawntimesecs`=10 WHERE `id`=190540;
 -- Changed respawn from 120 seconds to 10 seconds
 UPDATE `gameobject` SET `spawntimesecs`=10 WHERE `id`=190720;
 
+-- Raised Mud (Quest: An Embarassing Incident (Id: 12699))
+-- Changed id of alternate object
+UPDATE `gameobject` SET `id`=190778 WHERE `id`=190779;
+
+-- Raised Mud (Quest: An Embarassing Incident (Id: 12699))
+-- Changed respawn from 300 seconds to 10 seconds
+UPDATE `gameobject` SET `spawntimesecs`=1 WHERE `id`=190778;
+
 -- Dusty Journal (Quest: The Black Knight of Westfall? (Id: 13633), Quest: The Black Knight of Silverpine? (Id: 13634))
 -- Changed from 120 seconds to 1 second
 UPDATE `gameobject` SET `spawntimesecs`=1 WHERE `id`=194340;
