@@ -1,0 +1,3 @@
+-- Raised Mud (Quest: An Embarassing Incident (Id: 12699))
+-- Removed the pool
+DELETE FROM `pool_gameobject` WHERE `pool_entry` IN (50000, 50001);
